add README.md and remove market context
